# ReqSnake

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  NOTES.md  README.md  check.sh  mkdocs.yml  pyproject.toml  reqs.md  reqsnake.py  require.py  requirements-status.md  requirements.txt  setup.py  test_mkdocs_plugin.py  test_reqsnake.py  test_require.py
.cursor/rules/: global.mdc
.github/workflows/: check.yml  docs.yml  python-app.yml
docs/: README.md  REQ-CHECKS.md  REQ-INTEGRATION.md  REQ-OUTPUT.md  REQ-PARSER.md  REQ-TEST.md
mkdocs_reqsnake/: __init__.py  exceptions.py  generator.py  models.py  parser.py  plugin.py  reqsnake.py  utils.py  validator.py
requirements/: README.md  REQ-CLI.md  REQ-CORE.md  REQ-OUTPUT.md  REQ-PARSER.md  REQ-TEST.md
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  conftest.py  sample_requirements.py
tests/integration/: __init__.py  test_ignore_integration.py  test_plugin_integration.py  test_plugin_integration_simple.py
tests/unit/: __init__.py  test_generator.py  test_models.py  test_parser.py  test_utils.py  test_validator.py
