# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "mkdocs-reqsnake"

version = "0.0.1"                                                                  # REQUIRED, although can be dynamic
description = "Plugin providing requirements tracking within MkDocs documentation"
readme = "README.md"
requires-python = ">=3.10"
# license = { file = "LICENSE.txt" }

keywords = ["mkdocs", "plugin", "requirements", "documentation"]


# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
]

dependencies = ["mkdocs>=1.6", "mkdocs-material>=9.6"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
"Homepage" = "https://github.com/Wint3rmute/ReqSnake/"

[tool.setuptools]
package-dir = { mkdocs_reqsnake = "mkdocs_reqsnake" }

[project.entry-points."mkdocs.plugins"]
reqsnake = "mkdocs_reqsnake.plugin:ReqSnake"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["D", "B"]
